# imu_driver

./: CMakeLists.txt  README.md  package.xml
config/: defaults.yaml
include/encoders/: i2c_client_component.hpp
include/imu_driver/: imu_driver_component.hpp
launch/: composition_demo.launch.py
sketch_ESP32/: maila_encoder.h  maila_i2c_slave.h  sketch_ESP32.ino
src/: encoders_interface.cpp  i2c_client_component.cpp  imu_driver_component.cpp
