<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imu_driver</name>
  <version>0.0.1</version>
  <description>The package to interact with imu</description>
  <maintainer email="pooltomasin@hotmail.com">PaoloTo</maintainer>
  <maintainer email="valerio.magnago@gmail.com">ValerioMa</maintainer>
  <license>MIT License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rcutils</depend>
  <depend>i2c_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>rmw_implementation_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
